tests/specs/test/check_local_by_default2/main.out
error: TS2322 [ERROR]: Type '12' is not assignable to type '"b"'.
const b: "b" = 12;
      ^
    at [WILDCARD]/main.ts:3:7
